--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "start": "parcel index.html --open",
     "build": "parcel build index.html"
   },
-  "dependencies": {
-    "jest": "24.8.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "7.2.0",
     "parcel-bundler": "^1.6.1"
