--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "style your console logs in a familiar way",
   "main": "src/index.js",
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c -w"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/EmNudge/Styled-Logs#readme",
   "devDependencies": {
+    "@rollup/plugin-typescript": "^2.1.0",
     "rollup-plugin-babel-minify": "^9.0.0",
-    "rollup-plugin-cleanup": "^3.1.1"
+    "rollup-plugin-cleanup": "^3.1.1",
+    "tslib": "^1.10.0",
+    "typescript": "^3.7.5"
   }
 }
